--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -20,8 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
-        pip install --group dev
+        pip install -e ".[dev]"
         pip install pre-commit
 
     - name: Cache pre-commit environment
