--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,23 +27,17 @@ jobs:
       - name: Test with pytest
         run: |
           pytest tests/ \
-            --ignore=tests/dify \
-            -m "not slow and not integration" \
             --cov=kbbridge \
             --cov-report=xml \
             --cov-report=term \
             -v --tb=short
         env:
           PYTHONPATH: ${{ github.workspace }}
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
         with:
-          files: ./coverage.xml
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: false
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: egpivo/kb-bridge
       - name: Lint with flake8
         run: |
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
