Fix workflow: skip slow and integration tests
- Add filter to exclude slow and integration tests in GitHub Actions
- Matches Makefile behavior to prevent hanging on LLM-dependent tests
- Fixes test_evaluate_minimal hanging issue in CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,8 @@ jobs:
       - name: Test with pytest
         run: |
           pytest tests/ \
+            --ignore=tests/dify \
+            -m "not slow and not integration" \
             --cov=kbbridge \
             --cov-report=xml \
             --cov-report=term \
