Sync version numbers and fix bumpversion config
- Update kbbridge/__init__.py version to 0.1.0 to match pyproject.toml
- Fix bumpversion.cfg to reference kbbridge/__init__.py instead of kb_assistant/__init__.py

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -9,7 +9,7 @@ message = Bump version: {current_version} → {new_version}
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
-[bumpversion:file:kb_assistant/__init__.py]
+[bumpversion:file:kbbridge/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
