--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "kbbridge"
 version = "0.1.0"
 description = "MCP server for intelligent knowledge base search and retrieval with Dify integration"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 license = {text = "Apache-2.0"}
 authors = [
     {name = "Wen-Ting Wang", email = "egpivo@gmail.com"}
@@ -11,13 +11,14 @@ authors = [
 dependencies = [
     "aiohttp>=3.11.18",
     "fastmcp>=2.11.0",
-    "mcp[cli]>=1.9.4",
+    "mcp>=1.15.0",
     "pydantic>=2.11.3",
     "python-dotenv>=1.0.0",
     "dspy>=2.4.0",
     "uvicorn>=0.31.0",
     "fastapi>=0.116.1",
     "starlette>=0.27.0",
+    "smithery>=0.4.2",
 ]
 
 [project.optional-dependencies]
@@ -39,9 +40,16 @@ Documentation = "https://github.com/egpivo/kb-bridge/blob/main/README.md"
 Source = "https://github.com/egpivo/kb-bridge.git"
 "Bug Tracker" = "https://github.com/egpivo/kb-bridge/issues"
 
+[project.scripts]
+dev = "smithery.cli.dev:main"
+playground = "smithery.cli.playground:main"
+
+[tool.smithery]
+server = "kbbridge.server:create_server"
+
 [build-system]
-requires = ["setuptools >= 77.0.3"]
-build-backend = "setuptools.build_meta"
+requires = ["uv_build>=0.8.15,<0.9.0"]
+build-backend = "uv_build"
 
 [tool.setuptools.packages.find]
 where = ["."]
