--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,13 @@ Source = "https://github.com/egpivo/kb-bridge.git"
 [project.scripts]
 
 [build-system]
-requires = ["uv_build>=0.8.15,<0.9.0"]
-build-backend = "uv_build"
+requires = ["setuptools>=65.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "."}
 
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["kbbridge*"]
+exclude = ["tests*", "scripts*", "venv*", "htmlcov*"]
