--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -4,24 +4,83 @@ on:
   push:
     tags:
       - "v*"
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to publish (e.g., 0.1.0)'
+        required: false
+        type: string
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for tags
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
+
+      - name: Extract version from tag or input
+        id: get_version
+        run: |
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ] && [ -n "${{ github.event.inputs.version }}" ]; then
+            echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+          elif [ -n "${{ github.ref }}" ]; then
+            # Extract version from tag (e.g., refs/tags/v0.1.0 -> 0.1.0)
+            VERSION=$(echo "${{ github.ref }}" | sed 's/refs\/tags\/v//')
+            echo "version=$VERSION" >> $GITHUB_OUTPUT
+          else
+            # Fallback: extract from pyproject.toml
+            VERSION=$(grep -E '^version = ' pyproject.toml | sed 's/version = "\(.*\)"/\1/')
+            echo "version=$VERSION" >> $GITHUB_OUTPUT
+          fi
+          echo "Publishing version: $(cat $GITHUB_OUTPUT | grep version | cut -d'=' -f2)"
+
+      - name: Verify version matches pyproject.toml
+        run: |
+          PUBLISH_VERSION="${{ steps.get_version.outputs.version }}"
+          FILE_VERSION=$(grep -E '^version = ' pyproject.toml | sed 's/version = "\(.*\)"/\1/')
+          if [ "$PUBLISH_VERSION" != "$FILE_VERSION" ]; then
+            echo "Error: Version mismatch!"
+            echo "Tag/Input version: $PUBLISH_VERSION"
+            echo "pyproject.toml version: $FILE_VERSION"
+            exit 1
+          fi
+          echo "✓ Version verified: $PUBLISH_VERSION"
+
       - name: Install build tools
         run: |
           python -m pip install --upgrade pip
           pip install build twine
+
       - name: Build package
         run: python -m build
+
+      - name: Check package contents
+        run: |
+          echo "Built files:"
+          ls -lh dist/
+          echo ""
+          echo "Package info:"
+          python -m twine check dist/*
+
       - name: Publish to PyPI
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: twine upload dist/*
+
+      - name: Create GitHub Release
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ steps.get_version.outputs.version }}
+          draft: false
+          prerelease: false
