--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -13,6 +13,7 @@ replace = version = "{new_version}"
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
-[bumpversion:file:README.md]
-search = **Version:** {current_version}
-replace = **Version:** {new_version}
+# README.md doesn't contain version string, so we skip it
+# [bumpversion:file:README.md]
+# search = **Version:** {current_version}
+# replace = **Version:** {new_version}
