fix: add contents:write permission for GitHub release creation

--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -14,6 +14,8 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Required for creating GitHub releases
     steps:
       - uses: actions/checkout@v4
         with:
