--- a/.env.example
+++ b/.env.example
@@ -71,9 +71,9 @@ OVERALL_REQUEST_TIMEOUT=300
 # Default: 300 (5 minutes) - Should match OVERALL_REQUEST_TIMEOUT
 MCP_CLIENT_TIMEOUT=300
 
-# Dify API timeout (seconds) - Timeout for individual Dify API calls
-# Default: 60 (1 minute) - Increase if Dify API is slow
-DIFY_API_TIMEOUT=60
+# Retrieval API timeout (seconds) - Timeout for retrieval API calls
+# Default: 60 (1 minute) - Increase if retrieval API is slow
+RETRIEVAL_API_TIMEOUT=60
 
 # LLM timeout (seconds) - Timeout for LLM API calls
 # Default: 120 (2 minutes) - Increase for complex LLM processing
@@ -85,17 +85,17 @@ LLM_TIMEOUT_SECONDS=120
 # For simple queries (fast response):
 # OVERALL_REQUEST_TIMEOUT=180
 # MCP_CLIENT_TIMEOUT=180
-# DIFY_API_TIMEOUT=30
+# RETRIEVAL_API_TIMEOUT=30
 # LLM_TIMEOUT_SECONDS=60
 
 # For complex queries (comprehensive search):
 # OVERALL_REQUEST_TIMEOUT=600
 # MCP_CLIENT_TIMEOUT=600
-# DIFY_API_TIMEOUT=120
+# RETRIEVAL_API_TIMEOUT=120
 # LLM_TIMEOUT_SECONDS=180
 
 # For very complex queries (maximum processing time):
 # OVERALL_REQUEST_TIMEOUT=900
 # MCP_CLIENT_TIMEOUT=900
-# DIFY_API_TIMEOUT=180
+# RETRIEVAL_API_TIMEOUT=180
 # LLM_TIMEOUT_SECONDS=300
